[gd_scene load_steps=8 format=3 uid="uid://knxknpdbqjyf"]

[ext_resource type="Script" path="res://scenes/enemy_bullet.gd" id="1_0yc0d"]
[ext_resource type="Texture2D" uid="uid://dinu3s7vdpkrt" path="res://boolets.png" id="2_1f1ef"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8fdo"]
size = Vector2(4, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7blrt"]
atlas = ExtResource("2_1f1ef")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_da7x2"]
atlas = ExtResource("2_1f1ef")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1my7r"]
atlas = ExtResource("2_1f1ef")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbknl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7blrt")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_da7x2")
}],
"loop": true,
"name": &"fired",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1my7r")
}],
"loop": true,
"name": &"in_flight",
"speed": 5.0
}]

[node name="EnemyBullet" type="Area2D"]
rotation = -1.5708
script = ExtResource("1_0yc0d")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8.74228e-08, -2.38419e-07)
shape = SubResource("RectangleShape2D_u8fdo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.50632, 0.841866, 1)
texture_filter = 3
sprite_frames = SubResource("SpriteFrames_wbknl")
animation = &"fired"

[node name="Despawn" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
